Probe the JVM embedding runtime, and unblock the vector index
- RAD-0047 v2: JVM embeddings reproduce the MLX reference at cosine 0.99999 and return identical recall
- Lucene filters kNN by coordinate from inside the search; a post-filter returns nothing where 250 in-scope entries exist
- A 500-coordinate filter costs 1.6ms with the Vector API enabled, 2.96ms without
- The reference vectors are mean-pooled, not the CLS pooling BGE-M3 documents — measured, not invalidating, and now issue #10
- experiments/test23: the Lucene and embedding probes, model and jars gitignored

Signed-off-by: Brill Pappin <3903833+bpappin@users.noreply.github.com>